Refactoring data handling.