@@ -12,7 +12,6 @@ import static edu.ie3.simosaik.utils.SimosaikUtils.*;
 
 import edu.ie3.datamodel.models.value.PValue;
 import edu.ie3.datamodel.models.value.Value;
-import edu.ie3.datamodel.utils.TriFunction;
 import edu.ie3.simona.api.data.container.ExtInputContainer;
 import edu.ie3.simona.api.data.model.em.EmSetPoint;
 import edu.ie3.simona.api.data.model.em.FlexOptionRequest;
@@ -20,10 +19,8 @@ import edu.ie3.simona.api.data.model.em.FlexOptions;
 import edu.ie3.simosaik.utils.MosaikMessageParser.*;
 import java.util.*;
 import java.util.stream.Collectors;
-import javax.measure.quantity.Time;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import tech.units.indriya.ComparableQuantity;
 
 public final class InputUtils {
   private static final Logger log = LoggerFactory.getLogger(InputUtils.class);
@@ -68,18 +65,14 @@ public final class InputUtils {
     }
   }
 
-  public record EmMessageProcessor(
-      Map<String, UUID> idToUuid, Map<String, ComparableQuantity<Time>> maxDelay)
-      implements MessageProcessor {
+  public record EmMessageProcessor(Map<String, UUID> idToUuid) implements MessageProcessor {
     public void process(
         ExtInputContainer container, Map<String, List<Content>> receiverToMessages) {
       parseFlexRequests(receiverToMessages, idToUuid).forEach(container::addRequest);
-      parseFlexOptions(receiverToMessages, idToUuid, maxDelay).forEach(container::addFlexOptions);
-      parseSetPoints(receiverToMessages, idToUuid, maxDelay).forEach(container::addSetPoint);
+      parseFlexOptions(receiverToMessages, idToUuid).forEach(container::addFlexOptions);
+      parseSetPoints(receiverToMessages, idToUuid).forEach(container::addSetPoint);
     }
   }
-
-  // handling of em delays
 
   // private method for message parsing
 
@@ -128,7 +121,7 @@ public final class InputUtils {
                   receiver);
             }
 
-            result.put(receiverUuid, values.get(0));
+            result.put(receiverUuid, values.getFirst());
           }
         });
 
@@ -162,9 +155,12 @@ public final class InputUtils {
             }
 
             if (!requests.isEmpty()) {
-              FlexRequestMessage requestMessage = requests.get(0);
+              FlexRequestMessage requestMessage = requests.getFirst();
               FlexOptionRequest request =
-                  new FlexOptionRequest(receiverUuid, requestMessage.sender().map(idToUuid::get));
+                  new FlexOptionRequest(
+                      receiverUuid,
+                      requestMessage.sender().map(idToUuid::get).orElse(receiverUuid),
+                      requestMessage.disaggregated());
 
               flexRequests.put(receiverUuid, request);
             }
@@ -175,9 +171,7 @@ public final class InputUtils {
   }
 
   private static Map<UUID, List<FlexOptions>> parseFlexOptions(
-      Map<String, List<Content>> receiverToMessages,
-      Map<String, UUID> idToUuid,
-      Map<String, ComparableQuantity<Time>> maxDelay) {
+      Map<String, List<Content>> receiverToMessages, Map<String, UUID> idToUuid) {
     if (idToUuid.isEmpty()) {
       log.warn("No em external entity mapping found!");
       return Collections.emptyMap();
@@ -196,7 +190,6 @@ public final class InputUtils {
                     .filter(m -> m.getClass() == FlexOptionsMessage.class)
                     .map(FlexOptionsMessage.class::cast)
                     .flatMap(m -> m.information().stream())
-                    .filter(m -> shouldBeProcessed.apply(receiver, maxDelay, m.delay()))
                     .map(
                         optionMessage ->
                             new FlexOptions(
@@ -217,9 +210,7 @@ public final class InputUtils {
   }
 
   private static List<EmSetPoint> parseSetPoints(
-      Map<String, List<Content>> receiverToMessages,
-      Map<String, UUID> idToUuid,
-      Map<String, ComparableQuantity<Time>> maxDelay) {
+      Map<String, List<Content>> receiverToMessages, Map<String, UUID> idToUuid) {
     if (idToUuid.isEmpty()) {
       log.warn("No em external entity mapping found!");
       return Collections.emptyList();
@@ -245,21 +236,17 @@ public final class InputUtils {
                 log.debug("Received multiple set points for asset '{}'!", receiver);
               }
 
-              FlexSetPointMessage setPointMessage = setPointValues.get(0);
+              FlexSetPointMessage setPointMessage = setPointValues.getFirst();
+              UUID senderUuid = idToUuid.get(setPointMessage.sender());
 
               Optional<PValue> powerValue = toPValue(setPointMessage.p(), null);
 
               if (powerValue.isEmpty()) {
                 log.debug("No set point value found for asset {}.", receiver);
               } else {
-
-                boolean canReceive =
-                    shouldBeProcessed.apply(receiver, maxDelay, setPointMessage.delay());
-
-                if (canReceive) {
-                  setPoints.add(new EmSetPoint(receiverUuid, powerValue));
-                }
+                setPoints.add(new EmSetPoint(receiverUuid, senderUuid, powerValue));
               }
+
             } else {
               // if set point is given as double values
 
@@ -280,30 +267,14 @@ public final class InputUtils {
                 if (setPoint.isEmpty()) {
                   log.debug("No set point value found for asset {}.", receiver);
                 } else {
-                  setPoints.add(new EmSetPoint(receiverUuid, setPoint.get()));
+                  setPoints.add(new EmSetPoint(receiverUuid, receiverUuid, setPoint.get()));
                 }
               }
             }
           }
         });
 
+    log.info("Set points: {}", setPoints);
     return setPoints;
   }
-
-  private static final TriFunction<
-          String,
-          Map<String, ComparableQuantity<Time>>,
-          Optional<ComparableQuantity<Time>>,
-          Boolean>
-      shouldBeProcessed =
-          (id, maxDelay, delayOption) -> {
-            Optional<ComparableQuantity<Time>> maxDelayOption =
-                Optional.ofNullable(maxDelay.get(id));
-
-            if (maxDelayOption.isPresent() && delayOption.isPresent()) {
-              return delayOption.get().isLessThanOrEqualTo(maxDelayOption.get());
-            }
-
-            return true;
-          };
 }
